--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navbar {
+  background-color: #fff !important;
+  border-bottom: 1px solid #dee2e6;
+}
+
+.navbar-button {
+  position: relative;
+  left: -30px;
+  margin-top: 18px;
+}
+
+.logo {
+  position: relative;
+  top: -70px;
+  margin-left: 30px;
+}
+
+.admin {
+  position: relative;
+  top: -128px;
+  margin-left: 30px;
+  float:right;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.content {
+  padding: 0 24px 24px;
+}
